finalizando el proyecto

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
             </ul>
         </nav>
     </header>
-    
+    <main>
         <div id="contenedorPrincipal">
+            <form id="formulario">
             <div class="form-flex">
                 <label for="nombre" class="form-style">Ingrese su nombre:</label>
                 <input id="nombre" class="input-style" type="text" required>
@@ -40,9 +41,10 @@
                 <label for="recordar" class="form-style">¿Desea recordar sus datos?</label>
                 <input id="recordar" type="checkbox">
             </div>
+            </form>
             <h3 id="info"></h3>
         </div>
-    
+    </main>
 
     <script src="./main.js"></script>
 
