--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Segunda página</a></li>
+                <li><a href="./segundo.html">Segunda página</a></li>
             </ul>
         </nav>
     </header>
     <main>
+    <div id="centrar">
         <div id="contenedorPrincipal">
             <form id="formulario">
             <div class="form-flex">
@@ -41,10 +42,17 @@
                 <label for="recordar" class="form-style">¿Desea recordar sus datos?</label>
                 <input id="recordar" type="checkbox">
             </div>
+            <button id="eliminar" class="btn-style">Eliminar datos</button>
             </form>
             <h3 id="info"></h3>
         </div>
+    </div>
     </main>
+    <footer>
+        <div><h1>Coderhouse</h1></div>
+        <div><h1>Javascript</h1></div>
+        <div><h1>Comisión 51610</h1></div>
+    </footer>
 
     <script src="./main.js"></script>
 
