--- a/segundo.html
+++ b/segundo.html
@@ -2,11 +2,43 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="./style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
+    <title>JS</title>
 </head>
 <body>
-    <a href="./index.html">Ir atrás</a>
+
+    <header>
+        <div class="logo">
+            <h2>Tercera pre-entrega</h2>
+            <p class="text-opt">Redondo Julián</p>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="./index.html">Volver</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+    <div id="centrar">
+        <div id="contenedorPrincipal">
+            <h1>Página de prueba.<br><br>
+                La idea de crear esta página es para probar que la contraseña se guarda en el <span class="special-color">sessionStorage</span> y demostrar que al volver a la página principal puede volver a verse.<br><br>
+                (si se cierra la pestaña se elimina)
+            </h1>
+        </div>
+    </div>
+    </main>
+    <footer>
+        <div><h1>Coderhouse</h1></div>
+        <div><h1>Javascript</h1></div>
+        <div><h1>Comisión 51610</h1></div>
+    </footer>
+
+    <script src="./main.js"></script>
+
 </body>
 </html>
