--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 <input id="recordar" type="checkbox">
             </div>
             <button id="eliminar" class="btn-style">Eliminar datos</button>
+            <button id="botonJson" class="btn-style">JSON</button>
             </form>
             <h3 id="info"></h3>
         </div>
